@startuml
class EnquiryByPropertyDescriptionFactory {
    + EnquiryByPropertyDescriptionFactory(mapper:IMapper, logger:ILogger<LandRegistrySvc>)
    + <<override>> GetService() : LandRegistry
}
class PollPropertyDescriptionEnquiryFactory {
    + PollPropertyDescriptionEnquiryFactory(mapper:IMapper, logger:ILogger<LandRegistrySvc>)
    + <<override>> GetService() : LandRegistry
}
class EnquiryByPropertyDescription {
    + EnquiryByPropertyDescription(mapper:IMapper, logger:ILogger<LandRegistrySvc>)
    + <<override>> Validate() : void
    + <<override>> Map(landRegistryDto:LandRegistryDto) : void
    + <<override>> <<async>> Request() : Task
    + <<override>> Response() : LandRegistryDto
}
class PollEnquiryByPropertyDescription {
    + PollEnquiryByPropertyDescription(mapper:IMapper, logger:ILogger<LandRegistrySvc>)
    + <<override>> Validate() : void
    + <<override>> Map(landRegistryDto:LandRegistryDto) : void
    + <<override>> <<async>> Request() : Task
    + <<override>> Response() : LandRegistryDto
}
ServiceFactory <|-- EnquiryByPropertyDescriptionFactory
ServiceFactory <|-- PollPropertyDescriptionEnquiryFactory
LandRegistry <|-- EnquiryByPropertyDescription
LandRegistry <|-- PollEnquiryByPropertyDescription
@enduml
